--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/es.min.js"></script>
 
     <!-- Mis Scripts -->
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
