--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Proyecto web con JavaScript</title>
 
     <!-- Estilos css -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link id="theme" rel="stylesheet" type="text/css" href="css/green.css">
+    <link rel="stylesheet" href="styles.css">
+    <link id="theme" rel="stylesheet" href="green.css">
 
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
