--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <aside id="image">
                 
-                <img src="img/javascript-3.jpg" alt="JS Logo">
+                <img src="javascript-3.jpg" alt="JS Logo">
                 
             </aside>
             <div class="clearfix"></div>
