--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <!-- Slider -->
         <div id="slider">
             <div class="bxslider">
-                <div><img src="img/hojas.jpg" title="Hojas"></div>
-                <div><img src="img/rojo.jpg" title="Otoño"></div>
-                <div><img src="img/cielo.jpg" title="Cielo"></div>
+                <div><img src="hojas.jpg" title="Hojas"></div>
+                <div><img src="rojo.jpg" title="Otoño"></div>
+                <div><img src="cielo.jpg" title="Cielo"></div>
             </div>
         </div>
 
@@ -71,7 +71,7 @@
             <aside id="sidebar">
                 <div id="about">
                     <h4><span>¿Quien soy?</span></h4>
-                    <img src="img/multimedia.normal.97d6ca831de210d8.4265727365726b2d477574735f6e6f726d616c2e706e67.png" alt="Guts">
+                    <img src="multimedia.normal.97d6ca831de210d8.4265727365726b2d477574735f6e6f726d616c2e706e67.png" alt="Guts">
                     <p>
                         But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain
                         was born and I will give you a complete account of the system, and expound the actual teachings
