--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,16 @@
     <title>Proyecto web con JavaScript</title>
 
     <!-- Estilos css -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link id="theme" rel="stylesheet" type="text/css" href="css/green.css">
+    <link rel="stylesheet"  href="styles.css">
+    <link id="theme" rel="stylesheet" href="green.css">
 
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!-- JQUERY UI -->
-    <link rel="stylesheet" href="jquery-ui-1.12.1\jquery-ui.min.css">
-    <link rel="stylesheet" href="jquery-ui-1.12.1\jquery-ui.structure.min.css">
-    <link rel="stylesheet" href="jquery-ui-1.12.1\jquery-ui.theme.min.css">
+    <link rel="stylesheet" href="jquery-ui.min.css">
+    <link rel="stylesheet" href="jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="jquery-ui.theme.min.css">
 
 
     <!-- Moment.js -->
@@ -28,7 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js">
     </script>
 
-    <script src="jquery-ui-1.12.1\jquery-ui.min.js"></script>
+    <script src="jquery-ui.min.js"></script>
 
 </head>
 
@@ -48,7 +48,7 @@
             </div>
             <aside id="image">
 
-                <img src="img/javascript-3.jpg" alt="JS Logo">
+                <img src="javascript-3.jpg" alt="JS Logo">
 
             </aside>
             <div class="clearfix"></div>
@@ -97,7 +97,7 @@
             <aside id="sidebar">
                 <div id="about">
                     <h4><span>¿Quien soy?</span></h4>
-                    <img src="img/multimedia.normal.97d6ca831de210d8.4265727365726b2d477574735f6e6f726d616c2e706e67.png"
+                    <img src="multimedia.normal.97d6ca831de210d8.4265727365726b2d477574735f6e6f726d616c2e706e67.png"
                         alt="Guts">
                     <p>
                         But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain
@@ -140,7 +140,7 @@
         <a href="#" class="subir">Ir arriba</a>
     </footer>
     <!-- Mis Scripts -->
-    <script type="text/JavaScript" src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
