--- a/reloj.html
+++ b/reloj.html
@@ -7,8 +7,8 @@
     <title>Proyecto web con JavaScript</title>
 
     <!-- Estilos css -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link id="theme" rel="stylesheet" type="text/css" href="css/green.css">
+    <link rel="stylesheet" href="styles.css">
+    <link id="theme" rel="stylesheet" href="green.css">
 
     <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/es.min.js"></script>
  
-    <script src="jquery-ui-1.12.1\jquery-ui.min.js"></script>
+    <script src="jquery-ui.min.js"></script>
 
 </head>
 
@@ -37,7 +37,7 @@
             </div>
             <aside id="image">
                 
-                <img src="img/javascript-3.jpg" alt="JS Logo">
+                <img src="javascript-3.jpg" alt="JS Logo">
                 
             </aside>
             <div class="clearfix"></div>
@@ -62,7 +62,7 @@
             <aside id="sidebar">
                 <div id="about">
                     <h4><span>¿Quien soy?</span></h4>
-                    <img src="img/multimedia.normal.97d6ca831de210d8.4265727365726b2d477574735f6e6f726d616c2e706e67.png" alt="Guts">
+                    <img src="multimedia.normal.97d6ca831de210d8.4265727365726b2d477574735f6e6f726d616c2e706e67.png" alt="Guts">
                     <p>
                         But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain
                         was born and I will give you a complete account of the system, and expound the actual teachings
@@ -104,7 +104,7 @@
         <a href="#" class="subir">Ir arriba</a>
     </footer>
      <!-- Mis Scripts -->
-    <script type="text/JavaScript" src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
